Fix layout bug for location history #2 blocking access to map controls

--- a/app/assets/stylesheets/reports.css.scss
+++ b/app/assets/stylesheets/reports.css.scss
@@ -15,7 +15,7 @@ html,body{
 }
 
 #mapdiv {
-	width:70%;
+	width:65%;
   height: 100%;
   position:absolute;
   right:16px;
